working code to download invoice

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.5",
+    "@react-pdf/renderer": "^4.3.0",
     "mongoose": "^8.12.1",
     "next": "15.2.3",
     "openai": "^4.89.0",
