--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.5",
     "@react-pdf/renderer": "^4.3.0",
+    "cloudinary": "^2.6.0",
     "mongoose": "^8.12.1",
     "next": "15.2.3",
     "openai": "^4.89.0",
+    "pdfmake": "^0.2.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/react": "19.1.2",
     "daisyui": "^5.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
