--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
