--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.2.3",
     "openai": "^4.89.0",
     "pdfmake": "^0.2.18",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
