--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.12.5",
     "@react-pdf/renderer": "^4.3.0",
     "cloudinary": "^2.6.0",
+    "framer-motion": "^12.11.0",
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.501.0",
     "mongoose": "^8.12.1",
@@ -24,6 +25,8 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
