--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "uuid": "^11.1.0",
@@ -36,6 +37,7 @@
     "daisyui": "^5.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "shiki": "^3.4.2",
     "tailwindcss": "^4"
   }
 }
