--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-pdf/renderer": "^4.3.0",
     "cloudinary": "^2.6.0",
     "framer-motion": "^12.11.0",
+    "googleapis": "^149.0.0",
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.501.0",
     "mongoose": "^8.12.1",
     "next": "15.2.3",
     "openai": "^4.89.0",
+    "papaparse": "^5.5.3",
     "pdfmake": "^0.2.18",
+    "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
